3_k8s_objects/9_network/30_ingress/16_svc4/ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc4-deployment
  labels:
    app: nginx-ingress-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-ingress-demo
  template:
    metadata:
      labels:
        app: nginx-ingress-demo
    spec:
      containers:
        - name: ct-go-server
          image: noewangjinyuan/nginx-ingress-demo-svc4:0.1  # Replace with your image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc4-cluster-ip
spec:
  selector:
    app: nginx-ingress-demo
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 8888

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svc4-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - svc4.xxx.com
      secretName: secret-tls-svc4
  rules:
    - host: svc4.xxx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc4-cluster-ip
                port: 
                  number: 8888
